# stm32-test

./: Cargo.toml  debug.sh  release.sh
.cargo/: config
src/: main.rs
